--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+	"version" : "1.0",
     "name": "hakula/nacho",
     "description": "Nacho, nacho man. I want to be a nacho man",
     "license": "MIT",
